<resources>
    <string name="app_name">ProgriFit3.0</string>
    <!--
        Main Screen / Starting Screen
    -->
    <string name="main_screen_text">Let us be a part of your journey for a better you.</string>
    <string name="main_screen_button_text">Continue</string>

    <!--
        Information Screen
    -->
    <string name="information_text">Information</string>
    <string name="information_label_name">Name</string>
    <string name="information_label_age">Age</string>
    <string name="information_label_weight">Weight(kg)</string>
    <string name="information_label_height">Height(cm)</string>
    <string name="information_label_gender">Gender</string>
    <string name="information_label_activity_level">Activity Level</string>
    <string name="information_label_duration">Duration in Days</string>
    <string name="information_button_text">Next</string>
    <string name="information_hint_dropdown">Activity Level</string>

    <!--
        Home Screen
    -->
    <string name="homescreen_cardio_button_text">Cardio</string>
    <string name="homescreen_home_workout_text">Resistance Workout</string>
    <string name="homescreen_extensive_workout_button_text">Extensive Workout</string>
    <string name="homescreen_greetings">Greetings, User!</string>
    <string name="homescreen_subgreetings">What do you want to do today?</string>

    <!--
        Cardio Screen
    -->
    <string name="cardio_text">Cardio</string>
    <string name="cardio_subtext">Select or Add a new route</string>
    <string name="cardio_add_button">Add</string>
    <!--
        Add Route Screen
    -->
    <string name="add_cardio_text">Start a new run</string>
    <string name="add_cardio_subtext">What would you like to call your run?</string>
    <string name="add_cardio_route_name_label">Run Name</string>
    <string name="add_cardio_confirm_button">Confirm</string>

    <!--
        Start Route Screen
    -->
    <string name="time_elapsed_text">Time Elapsed</string>
    <string name="distance_subtext">Distance Travelled</string>
    <string name="calories_text">Calories Burned</string>
    <string name="stop_button">Stop</string>

    <!--
        Extensive Workout Page
    -->
    <string name="extensive_workout_text">Extensive Workout</string>
    <string name="extensive_workout_subtext">What do you want to work on today?</string>
    <string name="strength_text">Strength Training</string>
    <string name="cardio_exercise_text">Cardio Exercises</string>
    <string name="flex_exercise_text">Flexibility &amp; Mobility</string>
    <string name="full_exercise_text">Full-Body Workouts</string>
    <string name="Bodyweight_exercise_text">Body Weight Exercises</string>
    <string name="pylometric_exercise_text">Pylometric</string>

    <!--
        Extensive Workout Page [ Location ]
    -->
    <string name="strength_workout_text">Extensive Workout</string>
    <string name="strength_workout_subtext">What do you want to work on today?</string>
    <string name="strength_upper_text">Upper Body</string>
    <string name="strength_lower_text">Lower Body</string>
    <string name="strength_core_text">Core</string>

    <!--
        Start Workout
    -->
    <string name="start_workout_Repetitions_text">Repetitions</string>
    <string name="start_workout_Duration_text">Time</string>
    <string name="start_workout_start_Button_text">Start Workout</string>
    <string name="start_workout_Complete_button_text">Complete Workout</string>

    <!--
        Extensive Workout Page
    -->
    <string name="resistance_workout_text">Resistance Workout</string>
    <string name="resistance_workout_subtext">What do you want to work on today?</string>
    <string name="resistance_upper_body_text">Upper-Body</string>
    <string name="resistance_lower_body_text">Lower-Body</string>
    <string name="resistance_core_text">Core</string>
    <string name="resistance_full_body_text">Full-Body</string>
    <string name="resistance_Bodyweight_exercise_text">Body Weight Exercises</string>
</resources>