<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/subgreeting3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/resistance_workout_subtext"
        android:textColor="@color/White"
        android:textFontWeight="800"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username3"
        app:layout_constraintTop_toBottomOf="@+id/username3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/username3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/resistance_workout_text"
        android:textColor="@color/Fonts"
        android:textFontWeight="800"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.022" />

    <View
        android:id="@+id/view6"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginTop="36dp"
        android:background="@color/Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subgreeting3" />

    <View
        android:id="@+id/hoz2"
        android:layout_width="350dp"
        android:layout_height="4dp"
        android:background="@color/Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6"
        app:layout_constraintVertical_bias="0.05">

        <Button
            android:id="@+id/res_upper_body_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/resistance_upper_body_text"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/res_lower_body_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/resistance_lower_body_text"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/res_core_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/resistance_core_text"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/res_full_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/resistance_full_body_text"
            android:textColor="@color/White" />

        <Button
            android:id="@+id/res_body_weight_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/resistance_Bodyweight_exercise_text"
            android:textColor="@color/White" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progrifit_logo" />
</android.support.constraint.ConstraintLayout>