<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/extensive_workout_text"
        android:textColor="@color/Fonts"
        android:textFontWeight="800"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/subgreeting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/extensive_workout_subtext"
        android:textColor="@color/White"
        android:textFontWeight="800"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:layout_marginTop="48dp"
        android:background="@color/Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subgreeting2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="91dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progrifit_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.05">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/ext_strength_upper_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/strength_upper_text"
            android:textColor="@color/White" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/ext_strength_lower_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/strength_lower_text"
            android:textColor="@color/White" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/ext_strength_core_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/Secondary"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/strength_core_text"
            android:textColor="@color/White" />

    </LinearLayout>

    <View
        android:id="@+id/hoz"
        android:layout_width="350dp"
        android:layout_height="4dp"
        android:layout_marginTop="20dp"
        android:background="@color/Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>