<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- NAME INPUT -->
            <TextView
                android:id="@+id/name_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:labelFor="@+id/name_input"
                android:shadowColor="#D6D6D6"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="4"
                android:text="@string/information_label_name"
                android:textColor="#000000"
                android:textFontWeight="400"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- AGE INPUT -->
            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="Name"
                android:background="@drawable/custom_input"
                android:inputType="text" />

            <TextView
                android:id="@+id/age_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:labelFor="@+id/age_input"
                android:shadowColor="#D6D6D6"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="4"
                android:text="@string/information_label_age"
                android:textColor="#000000"
                android:textFontWeight="400"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/age_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="Name"
                android:background="@drawable/custom_input"
                android:inputType="text" />
            <!-- GENDER INPUT -->

            <!-- HEIGHT INPUT -->
            <TextView
                android:id="@+id/height_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:labelFor="@+id/height_input"
                android:shadowColor="#D6D6D6"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="4"
                android:text="@string/information_label_height"
                android:textColor="#000000"
                android:textFontWeight="400"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/height_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="Name"
                android:background="@drawable/custom_input"
                android:inputType="number" />

            <!-- WEIGHT INPUT -->
            <TextView
                android:id="@+id/weight_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="10dp"
                android:gravity="start"
                android:labelFor="@+id/weight_input"
                android:shadowColor="#D6D6D6"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="4"
                android:text="@string/information_label_weight"
                android:textColor="#000000"
                android:textFontWeight="400"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/weight_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="Name"
                android:background="@drawable/custom_input"
                android:inputType="number" />

            <!-- ACTIVITY LEVEL INPUT -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/information_hint_dropdown"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="79dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="316dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progrifit_logo" />


    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="164dp"
        android:background="@color/Secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="210dp"
        android:layout_height="53dp"
        android:fontFamily="@font/roboto"
        android:gravity="start"
        android:text="@string/information_text"
        android:textColor="@color/Fonts"
        android:textFontWeight="800"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/information_button_next"
        android:layout_width="324dp"
        android:layout_height="53dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_selector"
        android:text="@string/information_button_text"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>